# godot-plateau

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.ja.md  README.md  SConstruct
.github/: cliff.toml
.github/workflows/: make_build.yml
demo/: project.godot
demo/addons/plateau/: godot-plateau.gdextension  godot-plateau.gdextension.uid  plateau_converter_dialog.gd  plateau_export_dialog.gd  plateau_import_dialog.gd  plateau_plugin.gd  plugin.cfg
demo/addons/plateau/ios/arm64/: libgodot-plateau.ios.template_debug.arm64.dylib  libgodot-plateau.ios.template_release.arm64.dylib
demo/fonts/: japanese_font.tres
demo/samples/: api_sample.gd  api_sample.tscn  api_sample_simple.gd  attributes_color_sample.gd  attributes_color_sample.gd.uid  attributes_color_sample.tscn  attributes_display_sample.gd  attributes_display_sample.gd.uid  attributes_display_sample.tscn  basemap_sample.gd  basemap_sample.tscn  cityobject_select_sample.gd.uid  dataset_sample.gd  dataset_sample.tscn  export_sample.gd  export_sample.tscn  flood_sample.gd.uid  flood_sample.tscn  geo_reference_sample.gd  geo_reference_sample.tscn  granularity_sample.gd  granularity_sample.tscn  importer_sample.gd  importer_sample.tscn  lod_switch_sample.gd  material_adjuster_sample.gd  material_adjuster_sample.gd.uid  material_adjuster_sample.tscn  minimal_sample.gd  multi_model_sample.gd  multi_model_sample.gd.uid  multi_model_sample.tscn  plateau_utils.gd  plateau_utils.gd.uid  streaming_sample.gd  streaming_sample.gd.uid  streaming_sample.tscn  terrain_sample.gd  terrain_sample.gd.uid  terrain_sample.tscn
doc_classes/: PLATEAUCityModel.xml  PLATEAUCityModelScene.xml  PLATEAUCityObjectTypeHierarchy.xml  PLATEAUCityObjectTypeNode.xml  PLATEAUDatasetGroup.xml  PLATEAUDatasetMetadata.xml  PLATEAUDatasetSource.xml  PLATEAUDynamicTile.xml  PLATEAUDynamicTileManager.xml  PLATEAUDynamicTileMetaInfo.xml  PLATEAUDynamicTileMetaStore.xml  PLATEAUFilterCondition.xml  PLATEAUGeoReference.xml  PLATEAUGmlFile.xml  PLATEAUGmlFileInfo.xml  PLATEAUGranularityConverter.xml  PLATEAUHeightMapAligner.xml  PLATEAUHeightMapData.xml  PLATEAUImporter.xml  PLATEAUInstancedCityModel.xml  PLATEAUMeshData.xml  PLATEAUMeshExporter.xml  PLATEAUMeshExtractOptions.xml  PLATEAURnIntersection.xml  PLATEAURnIntersectionEdge.xml  PLATEAURnLane.xml  PLATEAURnLineString.xml  PLATEAURnModel.xml  PLATEAURnPoint.xml  PLATEAURnRoad.xml  PLATEAURnRoadBase.xml  PLATEAURnSideWalk.xml  PLATEAURnTrack.xml  PLATEAURnWay.xml  PLATEAUTerrain.xml  PLATEAUTileCoordinate.xml  PLATEAUVectorTile.xml  PLATEAUVectorTileDownloader.xml
patches/: visionos.py
project/: project.godot
project/addons/plateau/: godot-plateau.gdextension  icon.svg.import  plateau_converter_dialog.gd  plateau_converter_dialog.gd.uid  plateau_import_dialog.gd.uid  plateau_plugin.gd.uid  plugin.cfg
project/addons/plateau/shaders/: plateau_lod1_triplanar.gdshader  plateau_lod1_triplanar.gdshader.uid
project/samples/: api_sample.gd  api_sample.gd.uid  api_sample.tscn  api_sample_simple.gd  api_sample_simple.gd.uid  api_sample_simple.tscn  attributes_color_sample.tscn  attributes_display_sample.gd  basemap_sample.gd  basemap_sample.gd.uid  cityobject_select_sample.gd  cityobject_select_sample.tscn  dataset_sample.gd  dataset_sample.gd.uid  dataset_sample.tscn  dynamic_tile_sample.gd  dynamic_tile_sample.gd.uid  dynamic_tile_sample.tscn  export_sample.gd.uid  flood_sample.gd  geo_reference_sample.gd  geo_reference_sample.gd.uid  granularity_sample.gd.uid  importer_sample.gd  importer_sample.gd.uid  lod1_texture_sample.gd  lod1_texture_sample.gd.uid  lod1_texture_sample.tscn  lod_switch_sample.gd.uid  lod_switch_sample.tscn  material_adjuster_sample.tscn  minimal_sample.gd.uid  minimal_sample.tscn  streaming_sample.gd  terrain_sample.gd
src/: register_types.cpp
src/plateau/: plateau_basemap.cpp  plateau_basemap.h  plateau_city_model.cpp  plateau_city_model.h  plateau_city_model_scene.cpp  plateau_city_model_scene.h  plateau_city_object_type.cpp  plateau_city_object_type.h  plateau_dataset_source.cpp  plateau_dataset_source.h  plateau_dynamic_tile.cpp  plateau_dynamic_tile.h  plateau_geo_reference.cpp  plateau_geo_reference.h  plateau_gml_file.cpp  plateau_gml_file.h  plateau_granularity_converter.cpp  plateau_granularity_converter.h  plateau_grid_code.cpp  plateau_grid_code.h  plateau_height_map_aligner.cpp  plateau_height_map_aligner.h  plateau_importer.cpp  plateau_importer.h  plateau_instanced_city_model.cpp  plateau_instanced_city_model.h  plateau_mesh_exporter.cpp  plateau_mesh_exporter.h  plateau_mesh_extract_options.cpp  plateau_mesh_extract_options.h  plateau_mesh_utils.cpp  plateau_mesh_utils.h  plateau_parallel.h  plateau_platform.h  plateau_road_network.cpp  plateau_road_network.h  plateau_terrain.cpp  plateau_terrain.h  plateau_types.h
